commit of completion till task 6 of css excercises

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,23 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 20px;
+  display: flex;
+  
+  
+}
+
+
+
+.top .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  font-size: large;
+  font-weight: bold;
+
+  
 }
 
 .icon {
@@ -33,6 +50,20 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+
+.text {
+
+  padding-bottom: 10px;
+}
+
+.close {
+
+  display: flex;
+  justify-content: flex-end;
+
 }
 
 .close-button {
@@ -48,13 +79,23 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+
+  
 }
+
+.button {
+display: flex;
+gap: 5px;
+}
+
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
 }
+
+
 
 button.continue {
   background: royalblue;
