--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,14 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+
+  
+  padding: 8px;
 }
 
 .logo {
+  
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -12,14 +17,25 @@
 }
 
 ul {
+  
   /* this removes the dots on the list items*/
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+  gap: 8px;
   list-style-type: none;
+
 }
 
+
 a {
+  
   font-size: 22px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  
+  
 }
