--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -11,13 +13,44 @@ img {
   width: 600px;
 }
 
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px
+}
+
+a {
+  color: #6c5c5c69;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+
+
+.content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  flex-direction: column;
+  
+
+
+}
+
+
 button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 7px;
 }
-
+ 
 input {
   border: 1px solid #ddd;
   border-radius: 16px;
@@ -25,3 +58,17 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header, 
+.footer {
+
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+
+  background-color: #eee;
+}
+
