--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,73 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+.header, .footer {
+  display: flex;
+
+}
+
+ul {
+  list-style: none;
+
+}
+
+a {
+  color:#eee;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.body {
+  flex: 1;
+  display: flex;
+  
+}
+
+li {
+  margin-bottom: 16px;
+}
+
 .header {
+  align-items: center;
+  padding-left: 16px;
   height: 72px;
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
 }
 
 .footer {
+  align-items: center;
+  justify-content: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
+  flex-shrink: 0;
+  
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+}
+
 .card {
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
